# tamil-text-matcher

./: README.md  demo.py  pyproject.toml  setup.py
src/tamil_text_matcher/: __init__.py  core.py  encoder.py
src/tamil_text_matcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_matcher.py
